Replace usage of mirrorlist with an official Rocky mirror
Out of the box Rocky image goes with mirrorlist defined, while baseurl
is commented out. Until there're infra mirrors available, let's ensure
we are not picking out of the mirror list as it proved itself being
unreliable and 3rd party mirrors are getting desynced, which causes
failures in CI.

Needed-By: https://review.opendev.org/c/openstack/openstack-ansible-rabbitmq_server/+/967775
Change-Id: Id7593236f1ea121ae7cbc3fc0c58ca9df8a1deac
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/zuul.d/playbooks/pre-gate-cleanup.yml
+++ b/zuul.d/playbooks/pre-gate-cleanup.yml
@@ -36,3 +36,28 @@
         regexp: "^exclude="
         state: absent
       when: ansible_pkg_mgr == 'dnf'
+
+    - name: Replace mirrorlist with specific mirrors for Rocky
+      when:
+        - ansible_facts['distribution'] | lower == 'rocky'
+      block:
+        - name: Comment out mirrorlist for Rocky
+          replace:
+            path: "/etc/yum.repos.d/{{ item }}"
+            regexp: "^(mirrorlist=.*)$"
+            replace: "#\\1"
+          with_items:
+            - rocky.repo
+            - rocky-extras.repo
+            - rocky-devel.repo
+            - rocky-addons.repo
+        - name: Uncomment baseurl for Rocky
+          replace:
+            path: "/etc/yum.repos.d/{{ item }}"
+            regexp: "^#(baseurl=.*)$"
+            replace: "\\1"
+          with_items:
+            - rocky.repo
+            - rocky-extras.repo
+            - rocky-devel.repo
+            - rocky-addons.repo
