Use ttl instead of not_after in pki_authorities
Patch [1] suggests using `ttl` instead of `not_after` in
pki_authorities.
This patch changes the OSA defaults to match the new approach.

[1] https://review.opendev.org/c/openstack/ansible-role-pki/+/948880

Change-Id: I5fe7280be2b83791bb9b325949d26db827d06ec3
Signed-off-by: Damian Dabrowski <damian.dabrowski@cleura.com>

--- a/inventory/group_vars/all/ssl.yml
+++ b/inventory/group_vars/all/ssl.yml
@@ -45,7 +45,7 @@ openstack_pki_authorities:
      - digitalSignature
      - cRLSign
      - keyCertSign
-   not_after: "+3650d"
+   ttl: "3650d"
  - name: "ExampleCorpIntermediate"
    provider: ownca
    basic_constraints: "CA:TRUE,pathlen:0"
@@ -59,7 +59,7 @@ openstack_pki_authorities:
      - digitalSignature
      - cRLSign
      - keyCertSign
-   not_after: "+3650d"
+   ttl: "3650d"
    signed_by: "ExampleCorpRoot"
 
 #install the root CA certificate on all hosts and containers
