--- a/tests/roles/bootstrap-host/vars/main.yml
+++ b/tests/roles/bootstrap-host/vars/main.yml
@@ -51,20 +51,17 @@ bootstrap_host_scenarios_expanded: |-
   {% if 'ironic' in bootstrap_host_scenarios %}
   {%   set _ = scenario_list.extend(['swift']) %}
   {% endif %}
-  {% if ('magnum' in bootstrap_host_scenarios) or ('sahara' in bootstrap_host_scenarios) %}
+  {% if ('magnum' in bootstrap_host_scenarios) %}
   {%   set _ = scenario_list.extend(['heat'])  %}
   {% endif %}
   {% if 'manila' in bootstrap_host_scenarios %}
   {%   set _ = scenario_list.extend(['ceph'])  %}
   {% endif %}
-  {% if 'murano' in bootstrap_host_scenarios %}
-  {%   set _ = scenario_list.extend(['heat'])  %}
-  {% endif %}
   {% if ['telemetry', 'aodh', 'ceilometer', 'gnocchi'] | intersect(bootstrap_host_scenarios) | length > 0 %}
   {%   set _ = scenario_list.extend(['aodh', 'ceilometer', 'gnocchi']) %}
   {% endif %}
   {% if 'translations' in bootstrap_host_scenarios %}
-  {%   set _ = scenario_list.extend(['designate', 'heat', 'magnum', 'sahara', 'swift', 'trove']) %}
+  {%   set _ = scenario_list.extend(['designate', 'heat', 'magnum', 'swift', 'trove']) %}
   {% endif %}
   {{ (scenario_list | unique) | sort }}
 
