Offload kernel module management to openstack_hosts
With [1] being implemented, we are having quite a good baseline
for managing kernel modules in openstack_hosts role.

So we can offload module management to the role alike to
networking configuration.

Also, 8021q is laready present and managed there [2].

[1] https://review.opendev.org/c/openstack/openstack-ansible-openstack_hosts/+/951852
[2] https://opendev.org/openstack/openstack-ansible-openstack_hosts/src/commit/26deaeb701564b9b2059bab92104d24638f49674/vars/debian.yml#L25

Change-Id: I599d75dcc24cbcfa594cf1293e4c629b2c117c4a
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/tests/roles/bootstrap-host/tasks/prepare_aio_config.yml
+++ b/tests/roles/bootstrap-host/tasks/prepare_aio_config.yml
@@ -154,6 +154,9 @@
     - src: aio1_networks.yml.j2
       dest: host_vars/aio1/networks.yml
       condition: true
+    - src: aio1_kernel.yml.j2
+      dest: host_vars/aio1/kernel.yml
+      condition: true
     - src: user_variables_ceph.yml.j2
       dest: user_variables_ceph.yml
       condition: "{{ 'ceph' in bootstrap_host_scenarios_expanded }}"
