[aio] Include loopback preparations conditionally
Some niche scnarios, like Swift or Manila are executed for each
scenario, which is not necessary and might be confusing or
overwhelming for operators.

Let's limit amount of prepared loopback only to used scenarios.

Variable `bootstrap_host_loopback_machines` is not used anywhere in
AIO bootstrap logic, so can be safely removed.

Change-Id: Ic52c923f72bedaf6863bc55e4a43f0f541d9b5b2
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/tests/roles/bootstrap-host/defaults/main.yml
+++ b/tests/roles/bootstrap-host/defaults/main.yml
@@ -55,29 +55,24 @@ bootstrap_host_loopback_swap: false
 bootstrap_host_loopback_swap_size: 4096
 #
 # Boolean option to deploy the loopback disk for Cinder
-bootstrap_host_loopback_cinder: true
+bootstrap_host_loopback_cinder: "{{ 'cinder' in bootstrap_host_scenarios_expanded }}"
 # Size of the Cinder loopback disk in gigabytes (GB).
 bootstrap_host_loopback_cinder_size: 1024
 #
 # Boolean option to deploy the loopback disk for Swift
-bootstrap_host_loopback_swift: true
+bootstrap_host_loopback_swift: "{{ 'swift' in bootstrap_host_scenarios_expanded }}"
 # Size of the Swift loopback disk in gigabytes (GB).
 bootstrap_host_loopback_swift_size: 1024
 #
 # Boolean option to deploy the loopback disk for Nova
-bootstrap_host_loopback_nova: true
+bootstrap_host_loopback_nova: "{{ 'nova' in bootstrap_host_scenarios_expanded }}"
 # Size of the Nova loopback disk in gigabytes (GB).
 bootstrap_host_loopback_nova_size: 1024
 #
 # Boolean option to deploy the loopback disk for Manila
-bootstrap_host_loopback_manila: true
+bootstrap_host_loopback_manila: "{{ 'manila' in bootstrap_host_scenarios_expanded }}"
 # Size of the Manila loopback disk in gigabytes (GB).
 bootstrap_host_loopback_manila_size: 1024
-#
-# Boolean option to deploy the loopback disk for machines
-bootstrap_host_loopback_machines: true
-# Size of the machines loopback disk in gigabytes (GB).
-bootstrap_host_loopback_machines_size: 128
 #
 # Boolean option to deploy the loopback disk for btrfs
 bootstrap_host_loopback_btrfs: true
