[aio] Refactor loopback preparation
Current implementation of loopback preparation has quite significant
overhead, as we are calling exact same roles multiple times in order
to provision all required loopback devices. Moreover, we duplicate
code and logic needed for their provisionment, despite we have
pretty much 2 usecase - either add sparse file as LVM or format
and directly mount with systemd.

Proposed patch unifies approach by generating a variable with
required keys/parameters to create all required devices at once.

This should reduce overhead caused by multiple role imports/includes.
as each time role tries to install packages and verifies dependencies.

Change-Id: I419fdcfa2cfac5b636f817b1d6bdd82b7198e6be
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/tests/roles/bootstrap-host/tasks/main.yml
+++ b/tests/roles/bootstrap-host/tasks/main.yml
@@ -95,23 +95,14 @@
   when:
     - "lookup('env', 'ZUUL_SRC_PATH') | length > 0"
 
-# Prepare the swap space loopback disk
-# This is only necessary if there isn't swap already
-- name: Include prepare_loopback_swap
-  ansible.builtin.include_tasks: prepare_loopback_swap.yml
-  when:
-    - bootstrap_host_loopback_swap | bool
-    - ansible_facts['swaptotal_mb'] < 1
-  args:
-    apply:
-      tags:
-        - prepare-loopback
+- name: Import prepare_loopback tasks
+  ansible.builtin.import_tasks: prepare_loopback.yml
   tags:
-    - always
+    - prepare-loopback
 
 # Prepare the zfs storage loopback disk
-- name: Include prepare_loopback_zfs tasks
-  ansible.builtin.include_tasks: prepare_loopback_zfs.yml
+- name: Include prepare_zfs tasks
+  ansible.builtin.include_tasks: prepare_zfs.yml
   when:
     - bootstrap_host_loopback_zfs | bool
     - bootstrap_host_data_disk_device == None
@@ -120,81 +111,6 @@
     apply:
       tags:
         - prepare-loopback
-  tags:
-    - always
-
-# Prepare the btrfs storage loopback disk
-- name: Include prepare_loopback_btrfs tasks
-  ansible.builtin.include_tasks: prepare_loopback_btrfs.yml
-  when:
-    - bootstrap_host_loopback_btrfs | bool
-    - bootstrap_host_data_disk_device == None
-    - _lxc_container_backing_store == 'btrfs'
-  args:
-    apply:
-      tags:
-        - prepare-loopback
-  tags:
-    - always
-
-# Prepare the Cinder LVM VG loopback disk
-# This is only necessary if bootstrap_host_loopback_cinder is set to yes
-- name: Include prepare_loopback_cinder tasks
-  ansible.builtin.include_tasks: prepare_loopback_cinder.yml
-  when:
-    - bootstrap_host_loopback_cinder | bool
-  args:
-    apply:
-      tags:
-        - prepare-loopback
-  tags:
-    - always
-
-# Prepare the Nova instance storage loopback disk
-- name: Include prepare_loopback_nova tasks
-  ansible.builtin.include_tasks: prepare_loopback_nova.yml
-  when:
-    - bootstrap_host_loopback_nova | bool
-  args:
-    apply:
-      tags:
-        - prepare-loopback
-  tags:
-    - always
-
-# Prepare the Swift data storage loopback disks
-- name: Include prepare_loopback_swift tasks
-  ansible.builtin.include_tasks: prepare_loopback_swift.yml
-  when:
-    - bootstrap_host_loopback_swift | bool
-  args:
-    apply:
-      tags:
-        - prepare-loopback
-  tags:
-    - always
-
-# Prepare the Manila data storage loopback disks
-- name: Include prepare_loopback_manila tasks
-  ansible.builtin.include_tasks: prepare_loopback_manila.yml
-  when:
-    - bootstrap_host_loopback_manila | bool
-  args:
-    apply:
-      tags:
-        - prepare-loopback
-  tags:
-    - always
-
-# Prepare the Ceph cluster UUID and loopback disks
-- name: Include prepare_ceph tasks
-  ansible.builtin.include_tasks: prepare_ceph.yml
-  when:
-    - bootstrap_host_ceph | bool
-  args:
-    apply:
-      tags:
-        - prepare-ceph
   tags:
     - always
 
