Add debian trixie job definitions
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-openstack_hosts/+/965067
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-lxc_hosts/+/965074
Depends-On: https://review.opendev.org/c/openstack/ansible-hardening/+/965079
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-os_zun/+/965085
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-galera_server/+/965084
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-rabbitmq_server/+/965197
Depends-On: https://review.opendev.org/c/openstack/ansible-role-uwsgi/+/965207
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-os_horizon/+/965209
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible/+/965308
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-plugins/+/965798

Signed-off-by: Jonathan Rosser <jonathan.rosser@rd.bbc.co.uk>
Change-Id: I5da2da460486e4acd383b30c71e6fa67d3dfabf9

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -733,3 +733,133 @@
     name: openstack-ansible-deploy-hosts_lxc_overlayfs-rockylinux-10
     parent: openstack-ansible-deploy-aio
     nodeset: osa-rockylinux-10
+
+# debian trixie
+
+- job:
+    name: openstack-ansible-deploy-aio_telemetry_metal-debian-trixie
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-debian-trixie
+    vars:
+      mirror_fqdn: deb.debian.org
+      pypi_mirror: https://pypi.org/simple
+      pypi_fqdn:
+      wheel_mirror:
+
+- job:
+    name: openstack-ansible-deploy-aio_lxc-debian-trixie
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-debian-trixie
+    vars:
+      mirror_fqdn: deb.debian.org
+      pypi_mirror: https://pypi.org/simple
+      pypi_fqdn:
+      wheel_mirror:
+
+- job:
+    name: openstack-ansible-deploy-infra_lxc-debian-trixie
+    parent: openstack-ansible-deploy-aio-infra
+    nodeset: osa-debian-trixie
+    vars:
+      mirror_fqdn: deb.debian.org
+      pypi_mirror: https://pypi.org/simple
+      pypi_fqdn:
+      wheel_mirror:
+
+- job:
+    name: openstack-ansible-deploy-hosts_lxc-debian-trixie
+    parent: openstack-ansible-deploy-aio-hosts
+    nodeset: osa-debian-trixie
+    vars:
+      mirror_fqdn: deb.debian.org
+      pypi_mirror: https://pypi.org/simple
+      pypi_fqdn:
+      wheel_mirror:
+
+- job:
+    name: openstack-ansible-deploy-infra_distro_lxc-debian-trixie
+    parent: openstack-ansible-deploy-aio-infra
+    nodeset: osa-debian-trixie
+    vars:
+      mirror_fqdn: deb.debian.org
+      pypi_mirror: https://pypi.org/simple
+      pypi_fqdn:
+      wheel_mirror:
+
+- job:
+    name: openstack-ansible-deploy-hosts_distro_lxc-debian-trixie
+    parent: openstack-ansible-deploy-aio-hosts
+    nodeset: osa-debian-trixie
+    vars:
+      mirror_fqdn: deb.debian.org
+      pypi_mirror: https://pypi.org/simple
+      pypi_fqdn:
+      wheel_mirror:
+
+- job:
+    name: openstack-ansible-deploy-hosts_metal-debian-trixie
+    parent: openstack-ansible-deploy-aio-hosts
+    nodeset: osa-debian-trixie
+    vars:
+      mirror_fqdn: deb.debian.org
+      pypi_mirror: https://pypi.org/simple
+      pypi_fqdn:
+      wheel_mirror:
+
+- job:
+    name: openstack-ansible-deploy-aio_distro_lxc-debian-trixie
+    parent: openstack-ansible-deploy-aio-distro
+    nodeset: osa-debian-trixie
+    vars:
+      mirror_fqdn: deb.debian.org
+      pypi_mirror: https://pypi.org/simple
+      pypi_fqdn:
+      wheel_mirror:
+
+- job:
+    name: openstack-ansible-deploy-aio_metal-debian-trixie
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-debian-trixie
+    vars:
+      mirror_fqdn: deb.debian.org
+      pypi_mirror: https://pypi.org/simple
+      pypi_fqdn:
+      wheel_mirror:
+
+- job:
+    name: openstack-ansible-deploy-aio_distro_metal-debian-trixie
+    parent: openstack-ansible-deploy-aio-distro
+    nodeset: osa-debian-trixie
+    vars:
+      mirror_fqdn: deb.debian.org
+      pypi_mirror: https://pypi.org/simple
+      pypi_fqdn:
+      wheel_mirror:
+
+- job:
+    name: openstack-ansible-deploy-hosts_lxc_btrfs-debian-trixie
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-debian-trixie
+    vars:
+      mirror_fqdn: deb.debian.org
+      pypi_mirror: https://pypi.org/simple
+      pypi_fqdn:
+      wheel_mirror:
+
+- job:
+    name: openstack-ansible-deploy-hosts_lxc_overlayfs-debian-trixie
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-debian-trixie
+    vars:
+      mirror_fqdn: deb.debian.org
+      pypi_mirror: https://pypi.org/simple
+      pypi_fqdn:
+      wheel_mirror:
+
+- job:
+    name: openstack-ansible-tox-molecule-debian-trixie
+    parent: openstack-ansible-tox-molecule
+    vars:
+      tox_environment:
+        DOCKER_REGISTRY: quay.io/gotmax23
+        DOCKER_IMAGE_TAG: debian-systemd:trixie
