--- a/zuul.d/nodesets.yaml
+++ b/zuul.d/nodesets.yaml
@@ -30,3 +30,9 @@
     nodes:
       - name: rockylinux-10
         label: rockylinux-10-8GB
+
+- nodeset:
+    name: osa-debian-trixie
+    nodes:
+      - name: debian-trixie
+        label: debian-trixie-8GB
